使用 Colaboratory 创建

--- a/anydoor_colab.ipynb
+++ b/anydoor_colab.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "source": [
         "%cd /content\n",
-        "!https://github.com/nicehero/AnyDoor-for-colab\n",
+        "!git clone https://github.com/nicehero/AnyDoor-for-colab\n",
         "%cd /content/AnyDoor-for-colab\n",
         "!pip install share==1.0.4\n",
         "!pip install -r requirements.txt\n",
@@ -43,6 +43,18 @@
       ],
       "metadata": {
         "id": "0Lmml9VGSxcQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install open_clip_torch\n",
+        "!pip install pytorch_lightning"
+      ],
+      "metadata": {
+        "id": "ijStRy6N6C65"
       },
       "execution_count": null,
       "outputs": []
